--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Boards#index</h1>
-<p>Find me in app/views/boards/index.html.erb</p>
+<h1>MY Boards</h1>
+<hr />
+<hr />
+<h2>Welcome <%= current_user.email %></h2>
+<%= link_to "New Board", new_board_path %>
+<hr />
+<%= @boards.each do |board| %>
+    <h2><%= board.name %></h2>
+    <%end%>
 <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
-<h2>Welcome <%= current_user.first_name %></h2>
+
