functional user sign up with first and last name, functioning routes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,15 +5,15 @@
 
     <div class="field">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "First Name" %>
+    <%= f.text_field :first_name, autofocus: true, placeholder: "First Name" %>
   </div>
     <div class="field">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "Last Name" %>
+    <%= f.text_field :last_name, placeholder: "Last Name" %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, placeholder: "email" %>
   </div>
 
   <div class="field">
