--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -9,10 +9,9 @@
     <h2><%= board.name %></h2>
         
     <% board.lists.each do |list| %>
-    <h4><%= list.name %></h4>
+    <h4><%=link_to list.name, board_list_path(board, list) %></h4>
       <br>
     <% end %>
-
     <br>
     </div>
 <%end%>
